src/other/mico-2.3.12/test/idl/error/expected-stderr-case14.idl
case14.idl:8: parse error before '!'
